--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -226,11 +226,17 @@ header button {
     margin-bottom: 20px;
 }
 
+.btn-primary a {
+    text-decoration: none; /* Quitar el subrayado predeterminado del enlace */
+    color: inherit; /* Heredar el color del texto del botón */
+}
+
 .btn-primary{
 
     display: inline-block;
     width: fit-content;
     background-color: #F4822E;
+    outline: none;
     cursor: pointer;
     color: #fff;
     padding: 7px 15px;
@@ -238,12 +244,20 @@ header button {
     font-family: 'Oswald';
     transition: .3s;
     outline: none;
+    
+    
 }
+
 
 .btn-primary:hover{
 
     background-color: #000;
     outline: none;
+}
+
+.btn-secundary a {
+    text-decoration: none; /* Quitar el subrayado predeterminado del enlace */
+    color: inherit; /* Heredar el color del texto del botón */
 }
 
 .btn-secundary{
